# edutelligence

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  hyperion.code-workspace  pyproject.toml  renovate.json  shields.json
athena/: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  .prospector.yaml  README.md  athena-server-cli  athena-workspace.code-workspace  combine_coverage.py  docker-compose.cofee.yml  docker-compose.local-db.yml  docker-compose.playground.prod.yml  docker-compose.prod.yml  docker-compose.yml  mise.toml  pyproject.toml  simulate_pipeline.sh
athena/assessment_module_manager/: Dockerfile  docker-entrypoint.sh  modules.docker.ini  modules.ini  pyproject.toml
athena/athena/: .dockerignore  Dockerfile  alembic.ini  athena-docker.sh  pyproject.toml
athena/docs/: README.md  conf.py  docusaurus.config.ts  index.rst  package-lock.json  package.json  sidebars.ts
athena/env_example/: assessment_module_manager.env  module_programming_llm.env  module_text_llm.env
athena/evaluation/: .env.example  .gitignore  0_database_setup.ipynb  1_sampling_exercises.ipynb  2_sampling_submissions.ipynb  3_feedback_generation.ipynb  4_expert_evaluation.ipynb  5_llm_as_a_judge.ipynb  6_analysis copy 2.ipynb  6_analysis copy.ipynb  6_analysis.ipynb  6_analysis_data_export.ipynb  README.md  pyproject.toml
athena/llm_core/: .env.example  Dockerfile  llm_capabilities.yml  pyproject.toml
athena/log_viewer/: Dockerfile  pyproject.toml
athena/playground/: Dockerfile  package-lock.json  package.json
athena/scripts/: install_modules.py  lint_modules.py  test_modules.py
athena/tests/: pyproject.toml
atlas/AtlasMl/: .coverage  .dockerignore  .env.example  Dockerfile  README.md  application.example.yml  application.yml  pyproject.toml
hyperion/: .env.example  .flake8  .gitignore  Dockerfile  README.md  compose.local.yaml  compose.yaml  consistency_taxonomy.md  hyperion.code-workspace  openapi.yaml  pyproject.toml  run_tests.py  supported_consistency_issues.md
hyperion/app/: export_openapi_specs.py  health.py  logger.py  main.py  models.py  openapi.py  openrouter.py  openwebui.py  project_meta.py  security.py  settings.py
hyperion/docker/: .dockerignore  Dockerfile  Dockerfile.dev  compose.hyperion.local.yaml  compose.hyperion.yaml  compose.local.yaml  compose.proxy.yaml
hyperion/hyperion/: main.py  openapi.py  settings.py
hyperion/java-client/: .env.example  .gitignore  README.md  build.gradle  gradle.properties.template  pom.xml  settings.gradle  settings.xml
hyperion/playground/: check_health.py  create_variant.py  eval_consistency_checker.py  eval_consistency_checker_data_plot.py  eval_consistency_checker_report.py  eval_consistency_checker_variant_report.py  inspect_consistency.py  main.py  reexport_traces.py  test_inconsistency_check.py
hyperion/protos/: hyperion.proto
hyperion/scripts/: generate-certs.sh
iris/: .claudeignore  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  COURSE_CHAT_PIPELINE_REFACTORING.md  Dockerfile  Dockerfile.dockerignore  Pyris_Refactoring.md  README.MD  README.md  application.example.yml  llm_config.example.yml  log_conf.yml  pylintrc  pyproject.toml  requirements.txt
iris/.github/: CODEOWNERS
iris/.run/: Run Iris.run.xml
iris/app/: config.py
iris/docker/: nginx.yml  pyris-dev.yml  pyris-production-external-weaviate.yml  pyris-production-internal.yml  pyris-production.yml  pyris.yml  weaviate.yml
iris/docs/: .gitignore  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
iris/tests/: conftest.py  dummy.py  test_citation_pipeline_restoration.py  test_citation_utils.py  test_course_memory_extraction.py  test_course_memory_ingestion_upsert.py  test_course_memory_retrieval.py  test_course_memory_schema.py  test_feedbacks_tool.py  test_file_lookup_numbered_tool.py  test_heavy_pipeline_youtube_branch.py  test_ingestion_error_code_wiring.py  test_lecture_chat_pipeline_execution_dto.py  test_lecture_context_dto.py  test_lecture_display_page_number_fallback.py  test_lecture_ingestion_pipeline_skip_display_page_numbers.py  test_lecture_retrieval_context_boosting.py  test_lecture_retrieval_context_content.py  test_lecture_unit_page_dto.py  test_local_vs_submitted_diff_tool.py  test_logprob_confidence.py  test_logprob_pipeline_wiring.py  test_mcq_generation_pipeline.py  test_mcq_generation_tool.py  test_mcq_prompt_rendering.py  test_openai_chat_reasoning_effort.py  test_pipeline_execution_settings_dto.py  test_pipeline_health_checker.py  test_redacted_answer_posts.py  test_session_title_decision_parser.py  test_session_title_generation_pipeline.py  test_show_in_combined_view_tool.py  test_slide_page_number_parsing.py  test_status_update_error_code.py  test_struggle_callback.py  test_struggle_execution_dto.py  test_struggle_intervention_pipeline.py  test_struggle_route.py  test_struggle_signal_dto.py  test_struggle_smoke.md  (+5 more)
logos/: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  config-openwebui.yaml  debug_db.py  docker-compose-landing.yaml  docker-compose.dev.yaml  docker-compose.yaml  logos.conf  logos.example.yml  logos.openai.yml  profiles.yml  pyproject.toml  redeploy_test.sh  run_scheduling_data_test.sh  test_ast.py  users.yml
logos/benchmarks/: .gitignore  BENCHMARK_FRAMEWORKS.md  README.internal.md  Readme.md  analyze_workload.py  benchmark_anontool.py  benchmark_config.py  benchmark_logos.py  requirements.txt  (+5 more)
memiris/: .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.MD  log_conf.yml  pylintrc  pyproject.toml
nebula/: .env.local-example  .env.production-example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.MD  README.md  application_local.example.nebula.yml  build.gradle.kts  docker-compose-production.yml  docker-compose.yml  envoy.yaml  llm_config.example.yml  nebula-server-cli  nginx.compose_example.conf  nginx.example.conf  nginx.local_example.conf  pylintrc  pyproject.toml  requirements.txt  settings.gradle.kts
shared/: README.md  pyproject.toml
(+3125 files in other folders)
