[project]
name = "edutelligence"
version = "0.1.0"
description = ""
authors = [
    {name = "go69tes",email = "alexander.reyers@tum.de"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
