[tool.poetry]
name = "Athena"
version = "1.0.0"
description = "This is a helper module for easier development of Athena modules. It provides communication functionality with the Assessment Module manager, as well as helper functions for storage."
authors = ["Paul Schwind <paul.schwind@tum.de>"]
package-mode = true

[tool.poetry.dependencies]
python = "3.11.*"
python-dotenv = "1.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.5"
pytest-asyncio = "0.26.0"
prospector = "1.17.3"
setuptools = "80.9.0"

[tool.poetry.scripts]
lint_all = "scripts.lint_modules:main"
install_all = "scripts.install_modules:main"
lock_all = "scripts.lock_modules:main"
test_all = "scripts.test_modules:main"

[tool.pytest.ini_options]
pythonpath = ["athena", "llm_core"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
