[project]
name = "hyperion"
version = "0.1.0"
description = "Hyperion is an AI-powered FastAPI microservice that empowers instructors by generating and refining programming exercises. By integrating with modern learning management systems and CI build agents, Hyperion delivers context-aware suggestions and code stubs to enhance educational content."
authors = [
    { name = "Felix T.J. Dietrich", email = "felixtj.dietrich@tum.de"},
    { name = "Tobias Wasner", email = "tobias.wasner@tum.de"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"

[tool.poetry.dependencies]
python = ">=3.13,<4.0.0"
fastapi = {extras = ["standard"], version = "0.115.9"}
pydantic-settings = "2.8.1"
langchain = "0.3.19"
langchain-core = "0.3.40"
langchain-openai = "0.3.7"
langchain-ollama = "0.2.3"
langsmith = "0.3.11"
langfuse = "2.59.6"
gradio = "5.20.0"
streamlit = "^1.44.1"
shared = { path = "../shared", develop = true }

[tool.poetry]
packages = [
    { include = "hyperion" },
    { include = "playground" }
]

[tool.poetry.scripts]
openapi = "app.openapi:export"
playground = "streamlit run playground/main.py"

[tool.poetry.group.dev.dependencies]
black = "25.1.0"
flake8 = "7.1.2"

[virtualenvs]
create = true
in-project = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"