[project]
name = "hyperion"
version = "0.1.0"
description = "Hyperion is an AI-powered microservice that empowers instructors by generating and refining programming exercises. By integrating with modern learning management systems and CI build agents, Hyperion delivers context-aware suggestions and code stubs to enhance educational content."
authors = [
    { name = "Felix T.J. Dietrich", email = "felixtj.dietrich@tum.de"},
    { name = "Tobias Wasner", email = "tobias.wasner@tum.de"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"

[tool.poetry.dependencies]
python = ">=3.13,<4.0.0"
pydantic-settings = "2.8.1"
langchain = "0.3.25"
langchain-core = "0.3.59"
langchain-openai = "0.3.16"
langchain-ollama = "0.3.2"
langsmith = "0.3.42"
langfuse = "2.60.5"
shared = { path = "../shared", develop = true }
grpcio-tools = "1.73.0"
grpcio = "1.73.0"
grpcio-health-checking = "1.73.0"
mypy-protobuf = "3.6.0"
types-protobuf = "6.30.2.20250703"

[tool.poetry]
packages = [
    { include = "app" },
    { include = "playground" }
]

[tool.poetry.scripts]
hyperion = "app.main:serve"
generate-proto = "app.scripts.generate_grpc_stubs:main"
sync-proto-artemis = "app.scripts.sync_proto_artemis:main"

[tool.poetry.group.dev.dependencies]
black = "25.1.0"
flake8 = "7.1.2"
mypy = "1.12.1"

[virtualenvs]
create = true
in-project = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"