[project]
name = "hyperion"
version = "0.1.0"
description = "Hyperion is an AI-powered microservice that empowers instructors by generating and refining programming exercises. By integrating with modern learning management systems and CI build agents, Hyperion delivers context-aware suggestions and code stubs to enhance educational content."
authors = [
    { name = "Felix T.J. Dietrich", email = "felixtj.dietrich@tum.de"},
    { name = "Tobias Wasner", email = "tobias.wasner@tum.de"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"

[tool.poetry.dependencies]
python = ">=3.13,<4.0.0"
fastapi = {extras = ["standard"], version = "0.115.9"}
shared = { path = "../shared", develop = true }
pydantic-settings = "2.8.1"
langchain = "0.3.27"
langchain-core = "0.3.72"
langchain-openai = "0.3.28"
langchain-ollama = "0.3.6"
langsmith = "0.4.8"
langfuse = "2.60.5"
httpx = "0.28.1"

[tool.poetry]
packages = [
    { include = "app" },
    { include = "playground" }
]

[tool.poetry.scripts]
openapi = "app.openapi:export"
sync-openapi-artemis = "app.scripts.sync_openapi_artemis:main"

[tool.poetry.group.dev.dependencies]
black = "25.1.0"
flake8 = "7.1.2"
mypy = "1.16.1"
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}

[virtualenvs]
create = true
in-project = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"