[tool.poetry]
name = "iris"
version = "3.0.0"
description = "An LLM microservice for the learning platform Artemis"
authors = ["Timor Morrien <timor.morrien@tum.de>", "Patrick Bassner <patrick.bassner@tum.de>"]
readme = "README.MD"
packages = [{include = "iris", from = "src"}]
include = ["src/iris/py.typed"]

[tool.poetry.dependencies]
python = ">=3.12,<4.0.0"
fastapi = "0.135.1"
jinja2 = "^3.1.2"
langchain = "0.3.28"
ollama = "^0.5.4"
openai = "1.109.1"
psutil = "7.2.2"
pydantic = "2.12.5"
PyMuPDF = "1.27.2.2"
pytz = "2026.1.post1"
PyYAML = "6.0.3"
requests = "^2.32.5"
sentry-sdk = {version = "2.55.0", extras = ["starlette", "fastapi", "openai"]}
unstructured = "0.18.32"
uvicorn = "0.42.0"
weaviate-client = "^4.20.4"
langchain-core="^0.3.83"
starlette="^1.0.0"
langfuse="^3.14.5"
langchain-text-splitters="^0.3.11"
langchain-experimental="^0.3.3"
langchain-openai="^0.3.35"
cohere = "5.20.7"
types-pyyaml = "^6.0.12.20250915"
types-pytz = "^2026.1.1.20260304"
httpx = { version = "^0.28.1", extras = ["http2"] }
memiris = {path = "../memiris", develop = true}
apscheduler = "^3.11.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.19.1"
pylint = "^4.0.5"
black = "^26.3.1"
isort = "^8.0.1"
yamllint = "^1.38.0"
bandit = "^1.9.4"
pytest = "^9.0.2"
coverage = "^7.13.5"
detect-secrets = "^1.5.0"
pre-commit = "^4.5.1"
autoflake = "^2.3.3"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
mypy_path = "src"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.coverage.run]
branch = true
source = ["src"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
# fail_under = 80
# omit = ["tests/*", "your_module_name/__init__.py"]

[tool.coverage.html]
directory = "htmlcov"

[virtualenvs]
create = true
in-project = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
