[tool.poetry]
name = "iris"
version = "2.0.0"
description = "An LLM microservice for the learning platform Artemis"
authors = ["Timor Morrien <timor.morrien@tum.de>", "Patrick Bassner <patrick.bassner@tum.de>"]
readme = "README.md"
packages = [{include = "iris", from = "src"}]
include = ["src/iris/py.typed"]

[tool.poetry.dependencies]
python = ">=3.13,<4.0.0"
fastapi = "^0.135.1"
jinja2 = "^3.1.6"
langchain = "^1.2.10"
langchain-classic = "^1.0.1"
ollama = "^0.6.1"
openai = "^2.24.0"
psutil = "^7.2.2"
pydantic = "^2.12.5"
PyMuPDF = "^1.27.1"
pytz = "2025.2"
PyYAML = "6.0.2"
requests = "^2.32.5"
sentry-sdk = {version = "^2.54.0", extras = ["starlette", "fastapi", "openai"]}
uvicorn = "^0.41.0"
weaviate-client = "^4.20.1"
langchain-core="^1.2.16"
langfuse="^3.14.5"
langchain-text-splitters="^1.1.1"
langchain-experimental="^0.4.1"
langchain-openai="^1.1.10"
cohere = "^5.20.7"
types-pyyaml = "^6.0.12.20250915"
types-pytz = "^2025.2.0.20251108"
httpx = {version = "^0.28.1", extras = ["http2"]}
memiris = {path = "../memiris", develop = true}
apscheduler = "^3.11.2"
ffmpeg-python = "^0.2.0"
opencv-python-headless = "^4.13.0"
yt-dlp = "^2026.3.17"

[tool.poetry.group.dev.dependencies]
mypy = "^1.19.1"
pylint = "^4.0.5"
black = "^26.1.0"
isort = "^8.0.1"
yamllint = "^1.38.0"
bandit = "^1.9.4"
pytest = "^9.0.2"
coverage = "^7.13.4"
detect-secrets = "^1.5.0"
pre-commit = "^4.5.1"
autoflake = "^2.3.1"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
mypy_path = "src"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.coverage.run]
branch = true
source = ["src"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
# fail_under = 80
# omit = ["tests/*", "your_module_name/__init__.py"]

[tool.coverage.html]
directory = "htmlcov"

[virtualenvs]
create = true
in-project = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
