[tool.poetry]
name = "iris"
version = "2.2"
description = "An LLM microservice for the learning platform Artemis"
authors = ["Timor Morrien <timor.morrien@tum.de>", "Patrick Bassner <patrick.bassner@tum.de>"]
readme = "README.md"
packages = [{include = "iris", from = "src"}]
include = ["src/iris/py.typed"]

[tool.poetry.dependencies]
python = ">=3.13,<4.0.0"
fastapi = "^0.138.0"
jinja2 = "^3.1.6"
langchain = "^1.2.10"
langchain-classic = "^1.0.1"
ollama = "^0.6.2"
openai = "^2.43.0"
psutil = "^7.2.2"
pydantic = "^2.13.4"
PyMuPDF = "^1.27.2"
pytz = "2026.2"
PyYAML = "6.0.3"
requests = "^2.34.2"
sentry-sdk = {version = "^2.63.0", extras = ["starlette", "fastapi", "openai"]}
uvicorn = "^0.49.0"
weaviate-client = "^4.22.0"
langchain-core="^1.4.8"
langfuse="^3.15.0"
langchain-text-splitters="^1.1.2"
langchain-experimental="^0.4.1"
langchain-openai="^1.3.2"
cohere = "^7.0.4"
types-pyyaml = "^6.0.12.20260518"
types-pytz = "^2026.2.0.20260518"
httpx = {version = "^0.28.1", extras = ["http2"]}
memiris = {path = "../memiris", develop = true}
apscheduler = "^3.11.2"
onnxruntime = "^1.27.0"
transformers = "^4.57.6"
joblib = "1.5.3"
scikit-learn = "1.9.0"
ffmpeg-python = "^0.2.0"
opencv-python-headless = "^4.13.0"
yt-dlp = "^2026.6.9"

[tool.poetry.group.train.dependencies]
setfit = "^1.1.0"
optimum = {version = "^2.0.0", extras = ["onnxruntime"]}
datasets = "^5.0.0"
scikit-learn = "^1.9.0"
pandas = "^3.0.3"

[tool.poetry.group.dev.dependencies]
mypy = "^2.1.0"
pylint = "^4.0.6"
black = "^26.5.1"
isort = "^8.0.1"
yamllint = "^1.38.0"
bandit = "^1.9.4"
pytest = "^9.1.1"
coverage = "^7.14.2"
detect-secrets = "^1.5.0"
pre-commit = "^4.6.0"
autoflake = "^2.3.3"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
mypy_path = "src"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.coverage.run]
branch = true
source = ["src"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
# fail_under = 80
# omit = ["tests/*", "your_module_name/__init__.py"]

[tool.coverage.html]
directory = "htmlcov"

[virtualenvs]
create = true
in-project = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
