[project]
name = "logos"
version = "0.1.0"
description = "Logos is an LLM Engineering Platform that includes usage logging, billing, central resouce management, policy-based model selection, scheduling, and monitoring."
authors = [
    {name = "Tobias Wasner",email = "tobias.wasner@tum.de"},
    {name = "Florian Briksa",email = "florian.briksa@tum.de"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"

[tool.poetry.dependencies]
python = ">=3.13,<4.0.0"
fastapi = {extras = ["standard"], version = "0.115.9"}
shared = { path = "../shared", develop = true }
requests = "^2.32.3"
langchain = ">=0.3.23"
langchain-community = "^0.3.21"
openai = "^1.74.0"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
psycopg2-binary = "^2.9.10"
SQLAlchemy = "^2.0.40"
grpcio = "^1.71.0"
grpcio-tools = "^1.71.0"
protobuf = "^5.27.2"
tiktoken = "^0.9.0"
python-dateutil = "^2.9.0"
sentence-transformers = "^5.0.0"
matplotlib = "^3.9.2"

[tool.poetry]
packages = [{ include = "logos", from = "src" }]

[tool.poetry.scripts]
openapi = "app.openapi:export"

[tool.poetry.group.dev.dependencies]
black = "25.1.0"
flake8 = "7.1.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
