[tool.poetry]
name = "memiris"
version = "0.1.1"
description = ""
authors = ["Timor Morrien <timor.morrien@tum.de>"]
readme = "README.MD"
packages = [
    {include = "memiris", from = "src"},
    {include = "memiris_tests", from = "tests"}
]
include = ["src/memiris/py.typed"]

[tool.poetry.dependencies]
python = ">=3.12,<4.0.0"
weaviate-client = "^4.19.2"
jinja2 = "^3.1.6"
ollama = "^0.6.1"
openai = "^2.15.0"
cachetools = "^6.2.5"
pylint-per-file-ignores = "^3.2.0"
langfuse = "^3.12.0"
langchain = "^0.3.27"
langchain-core = "^0.3.83"
langchain-community = "^0.3.31"
langchain-ollama = "^0.3.10"
langchain-openai = "^0.3.35"
langgraph = "^1.0.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.19.1"
pylint = "^4.0.4"
black = "^26.1.0"
isort = "^7.0.0"
yamllint = "^1.38.0"
bandit = "^1.9.3"
pytest = "^9.0.2"
coverage = "^7.13.2"
detect-secrets = "^1.5.0"
prettier = "^0.0.7"
pre-commit = "^4.5.1"
types-cachetools = "^6.2.0.20251022"
types-PyYAML = "^6.0.12.20241230"
testcontainers = {extras = ["weaviate"], version = "^4.14.0"}
pytest-mock = "^3.15.1"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B311"]

[tool.mypy]

[[tool.mypy.overrides]]
module = "langfuse.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[tool.pylint."MESSAGES CONTROL"]
disable = ["not-context-manager"]

[tool.coverage.run]
branch = true
source = ["src"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
# fail_under = 80
# omit = ["tests/*", "your_module_name/__init__.py"]

[tool.coverage.html]
directory = "htmlcov"

[virtualenvs]
create = true
in-project = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
