[tool.poetry]
name = "nebula"
version = "3.0.0"
description = "An LLM microservice for the learning platform Artemis"
authors = ["Timor Morrien <timor.morrien@tum.de>", "Patrick Bassner <patrick.bassner@tum.de>"]
readme = "README.MD"
packages = [
    {include = "nebula", from = "src"},
]
include = [
    "src/nebula/py.typed",
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0.0"
requests = "2.32.3"
fastapi = "0.115.5"
uvicorn = "0.32.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
pylint = "^3.2.3"
black = "^25.1.0"
isort = "^6.0.1"
yamllint = "^1.35.1"
bandit = "^1.8.3"
pytest = "^8.3.3"
coverage = "^7.6.1"
detect-secrets = "^1.5.0"
pre-commit = "^4.1.0"
grpcio-tools = "^1.72.1"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.bandit]
exclude_dirs = ["tests"]

[tool.coverage.run]
branch = true
source = ["src"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
# fail_under = 80
# omit = ["tests/*", "your_module_name/__init__.py"]

[tool.coverage.html]
directory = "htmlcov"

[virtualenvs]
create = true
in-project = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
