[tool.poetry]
name = "assessment-module-manager"
version = "0.1.0"
description = "The interface between the Athena modules and external systems. It manages, which modules will be used for incoming submissions and feedback."
authors = ["Paul Schwind <paul.schwind@tum.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.11.*"
athena = { path = "../athena", develop = true }
fastapi = "0.120.1"
uvicorn = "0.38.0"
httpx = "0.28.1"

[tool.poetry.group.dev.dependencies]
types-requests = "2.32.4.20250913"
pydantic = "2.11.7"
prospector = "1.17.3"

[tool.poetry.scripts]
assessment_module_manager = "assessment_module_manager.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
