[tool.poetry]
name = "assessment-module-manager"
version = "2.5"
description = "The interface between the Athena modules and external systems. It manages, which modules will be used for incoming submissions and feedback."
authors = ["Paul Schwind <paul.schwind@tum.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.14.*"
athena = { path = "../athena", develop = true }
fastapi = "0.139.0"
uvicorn = "0.49.0"
httpx = "0.28.1"

[tool.poetry.group.dev.dependencies]
types-requests = "2.33.0.20260518"
pydantic = "2.13.4"
prospector = { version = "1.19.0", extras = ["with_mypy"] }

[tool.poetry.scripts]
assessment_module_manager = "assessment_module_manager.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
