[tool.poetry]
name = "athena"
version = "1.0.0"
description = "This is a helper module for easier development of Athena modules. It provides communication functionality with the Assessment Module manager, as well as helper functions for storage."
authors = ["Paul Schwind <paul.schwind@tum.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.11.*"
fastapi = "^0.120.1"
uvicorn = "^0.38.0"
httpx = "^0.28.1"
gitpython = "^3.1.45"
sqlalchemy = {extras = ["mypy"], version = "^2.0.44"}
psycopg2 = "^2.9.11"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.32.4.20250913"
pydantic = "^2.11.7"
prospector = "^1.17.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
