[tool.poetry]
name = "athena"
version = "2.0.0"
description = "This is a helper module for easier development of Athena modules. It provides communication functionality with the Assessment Module manager, as well as helper functions for storage."
authors = ["Paul Schwind <paul.schwind@tum.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.14.*"
fastapi = "0.136.1"
uvicorn = "0.46.0"
httpx = "0.28.1"
gitpython = "3.1.47"
sqlalchemy = {extras = ["mypy"], version = "2.0.49"}
psycopg2 = "2.9.12"

[tool.poetry.group.dev.dependencies]
types-requests = "2.33.0.20260408"
pydantic = "2.13.3"
prospector = "1.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
