[tool.poetry]
name = "athena"
version = "2.2"
description = "This is a helper module for easier development of Athena modules. It provides communication functionality with the Assessment Module manager, as well as helper functions for storage."
authors = ["Paul Schwind <paul.schwind@tum.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.14.*"
fastapi = "0.136.3"
uvicorn = "0.49.0"
httpx = "0.28.1"
gitpython = "3.1.50"
sqlalchemy = {extras = ["mypy"], version = "2.0.50"}
psycopg2 = "2.9.12"

[tool.poetry.group.dev.dependencies]
types-requests = "2.33.0.20260518"
pydantic = "2.13.4"
prospector = { version = "1.18.0", extras = ["with_mypy"] }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
