[tool.poetry]
name = "evaluation"
version = "2.0.0"
description = ""
authors = ["Dominik Remo <47261058+DominikRemo@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "3.14.*"
pandas = "2.3.3"
matplotlib = "3.10.9"
langid = "1.1.6"
mysql-connector-python = "9.7.0"
python-dotenv = "1.2.2"
langchain-openai = "1.2.1"
langchain = "1.2.15"
langchain-community = "0.4.1"
ipykernel = "7.2.0"
tqdm = "4.67.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
