[tool.poetry]
name = "evaluation"
version = "2.2"
description = ""
authors = ["Dominik Remo <47261058+DominikRemo@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "3.14.*"
pandas = "2.3.3"
matplotlib = "3.11.0"
langid = "1.1.6"
mysql-connector-python = "9.7.0"
python-dotenv = "1.2.2"
langchain-openai = "1.3.0"
langchain = "1.3.9"
langchain-community = "0.4.2"
ipykernel = "7.3.0"
tqdm = "4.68.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
