[tool.poetry]
name = "llm_core"
version = "2.2"
description = "SHared LLM module."
authors = ["Felix Dietrich <felixtj.dietrich@tum.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.11.*"
athena = { path = "../athena", develop = true }
langsmith = "0.8.3"
langchain = "1.3.0"
langchain-community = "0.4.1"
langchain-openai = "1.2.1"
openai = "2.36.0"
python-dotenv = "1.2.2"
tiktoken = "0.12.0"
#langfuse = "^3.3.0"

[tool.poetry.scripts]
module = "athena:run_module"

[tool.poetry.group.dev.dependencies]
prospector = { version = "1.18.0", extras = ["with_mypy"] }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
