[tool.poetry]
name = "llm_core"
version = "2.5"
description = "SHared LLM module."
authors = ["Felix Dietrich <felixtj.dietrich@tum.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.14.*"
athena = { path = "../athena", develop = true }
langsmith = "0.9.5"
langchain = "1.3.11"
langchain-community = "0.4.2"
langchain-openai = "1.3.3"
openai = "2.44.0"
python-dotenv = "1.2.2"
tiktoken = "0.13.0"
#langfuse = "^3.3.0"

[tool.poetry.scripts]
module = "athena:run_module"

[tool.poetry.group.dev.dependencies]
prospector = { version = "1.19.0", extras = ["with_mypy"] }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
