[tool.poetry]
name = "log-viewer"
version = "2.0.0"
description = "Shows the logs of the assessment module manager and all modules in a web interface."
authors = ["Paul Schwind <paul.schwind@tum.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.14.*"
fastapi = "0.136.1"
uvicorn = "0.46.0"
docker = "7.1.0"
mypy = "1.20.2"

[tool.poetry.group.dev.dependencies]
types-requests = "2.33.0.20260408"
prospector = "1.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
