[tool.poetry]
name = "log-viewer"
version = "2.2"
description = "Shows the logs of the assessment module manager and all modules in a web interface."
authors = ["Paul Schwind <paul.schwind@tum.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.14.*"
fastapi = "0.136.3"
uvicorn = "0.49.0"
docker = "7.1.0"
#mypy = "1.18.2"

[tool.poetry.group.dev.dependencies]
types-requests = "2.33.0.20260518"
prospector = { version = "1.18.0", extras = ["with_mypy"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
