[tool.poetry]
name = "atlasml"
version = "0.1.0"
description = ""
authors = ["Maximilian Anzinger <anzinger@cit.tum.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.5"
weaviate-client = "^4.0"
datasets = "^3.5.0"
sentence-transformers = "^4.0.2"
pydantic-settings = "^2.8.1"
matplotlib = "^3.10.1"
scipy = "^1.15.2"
apscheduler = "^3.10.4"
bs4 = "^0.0.2"
markdown = "^3.8"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.32.1"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.25.3"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
