[tool.poetry]
name = "atlasml"
version = "0.1.0"
description = ""
authors = ["Maximilian Anzinger <anzinger@cit.tum.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
weaviate-client = "^4.0"
datasets = "^3.5.0"
sentence-transformers = "^4.0.2"
pydantic-settings = "^2.8.1"
matplotlib = "^3.10.1"
scipy = "^1.15.2"
apscheduler = "^3.10.4"
openai = "==1.93.0"
sentry-sdk = {extras = ["fastapi"], version = "^2.34.1"}
markdown = "^3.8.2"
bs4 = "^0.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
ruff = "^0.3.0"
black = "^25.1.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.25.3"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable all rules by default
lint.select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
lint.ignore = []

# Allow autofix for all enabled rules (when `--fix` is used)
lint.fixable = ["ALL"]
lint.unfixable = []

# Exclude a variety of commonly ignored directories.
lint.exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.12
target-version = "py312"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.per-file-ignores]
"tests/*" = ["PLR2004"]  # Ignore magic number warnings in tests

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"